--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.15",
     "axios": "^0.21.1",
     "esbuild-wasm": "0.8.27",
+    "localforage": "^1.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
