--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/jscodeshift": "^0.7.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
     "axios": "^0.21.1",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "jscodeshift": "^0.11.0",
     "localforage": "^1.9.0",
     "monaco-editor": "0.26.1",
+    "monaco-jsx-highlighter": "0.0.15",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
